--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,9 @@ ul {
 }
 
 .carousel {
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background-color: whitesmoke;
 }
